# physics-sim

./: Cargo.toml  LICENSE  README.md  celestial.csv
src/: draw_stars.rs  main.rs
