[package]
name = "physics"
version = "0.1.0"
authors = ["Fenimore Love <exorable.ludos@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
piston_window = "0.74.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.22.0"
piston2d-sprite = "0.41.0"
image = "0.18.0"
piston2d-drag_controller = "0.21.0"
gfx = "0.16.0"
gfx_device_gl = "0.14.0"
vecmath = "0.3.0"
camera_controllers = "0.23.0"
rand = "0.3.14"
shader_version = "0.3.0"
csv = "1.0.0-beta.3"